--- a/MSAL.Client.JS/clientservice/package.json
+++ b/MSAL.Client.JS/clientservice/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^17.0.16",
     "@types/xrm": "^9.0.59",
     "dotenv": "^16.0.1",
+    "env-cmd": "^10.1.0",
     "html-react-parser": "^1.4.12",
     "install": "^0.13.0",
     "npm": "^8.11.0",
@@ -27,8 +28,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "env-cmd -f .env react-scripts start",
+    "build": "env-cmd -f .env react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
